--- a/pf-flex.css
+++ b/pf-flex.css
@@ -70,9 +70,13 @@ min-height: 100%;
   }
 
   .Intro{
+    position: relative;
+    height: 100vh;
+    min-height: 100%;
+    max-height: 100%;
+    background: url(./hacker-wide.jpg);
     background-size: cover;
-    padding: 300px;
-  }
+    }
   .Main{
    display: flex;
    flex-direction: column;
