--- a/pf-flex.css
+++ b/pf-flex.css
@@ -1,104 +1,290 @@
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
-@media  all and (max-width: 780px) {
-.intro2{
-    position: relative;
-  display: flex;
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: 'Alegreya SC';
+  font-size: 22px;
+  padding: 0;
+  margin: 0;
+}
+
+.introtxt {
+  font-style: 'Anonymous Pro';
+  color: green;
+  margin: 0.1 auto;
+  border-right: 5px solid rgba(255, 255, 255, .75);
+  font-size: 5vw;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);
+}
+
+.anim-typewriter {
+  animation: typewriter 4s steps(60) 1s 1 normal both,
+    blinkTextCursor 400ms steps(44) infinite normal,
+    glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 15em;
+  }
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #067c00, 0 0 20px #078901, 0 0 25px #089601, 0 0 30px #07a000, 0 0 35px #0ac101;
+  }
+
+  to {
+    text-shadow: 0 0 10px #fff, 0 0 15px #7cff44, 0 0 20px #81ff3d, 0 0 25px #75f72e, 0 0 30px #72ff26, 0 0 35px #6dfc20, 0 0 40px #68ff16;
+  }
+}
+
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: rgba(255, 255, 255, .9);
+  }
+
+  to {
+    border-right-color: transparent;
+  }
+}
+
+.flip-cards {
+  background-image: url(./prism.png);
+  background-size: cover;
+  perspective: 1000px;
+}
+
+.fp-inner {
+  position: relative;
   width: 100%;
-  flex-direction: column;
-  flex-wrap: wrap;
-  flex:auto;
-  align-items: center;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-cards:hover .fp-inner {
+  transform: rotateY(180deg);
+}
+
+.fp-front, .fp-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.fp-back {
+  color: black;
+  font-weight: bold;
+  background-image: url(./intro2bg.png);
+  background-size: cover;
+  transform: rotateY(180deg);
+}
+
+.txtintro2 {
+  top: 100%;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+#myVideo {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.abouttxt1 {
+  position: relative;
+  font-family: 'Anonymous Pro';
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+.abouttxt2 {
+  position: relative;
+  font-size: 23px;
+  font-weight: bold;
+  font-family: 'Anonymous Pro';
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+#link {
+  background-color: gray;
+  box-shadow: 0 5px 0 darkgray;
+  color: black;
+  padding: 0.4em 0.5em;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+#link:hover {
+  background-color: #288901;
+  cursor: pointer;
+}
+
+#link:active {
+  box-shadow: none;
+  top: 5px;
+}
+
+.btn {
+  padding: 0.8em 1.5em;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: bold;
+  background-image: url(./blueshade.png);
+  box-shadow: 0 5px 0 darkblue;
+  color: black;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  background-color: #288901;
+  cursor: pointer;
+}
+
+@media all and (max-width: 780px) {  
+  .intro2 {
+    position: relative;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex: auto;
+    align-items: center;
     background-image: url(./bgintro.png);
     background-repeat: no-repeat;
     background-size: cover;
+  }
 
-}
- .flip-cards{
-min-width: 100%;
-max-height: 20%;
+  .flip-cards {
+    min-width: 100%;
+    max-height: 20%;
+  }
+
+  .Intro {
+    background: url(hacker-wide.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-width: 100%;
+    min-height: 100%;
+    overflow: hidden;
+  }
+
+  .Main {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    max-width: 100vw;
+  }
+
+  .introtxt {
+    position: relative;
+    width: 24em;
+  }
+
+  .flip-cards {
+    width: 300px;
+    height: 300px;
+    min-height: 100%;
+  }
+
+  .textouter {
+    position: inherit;
+    padding-right: 100px;
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    background-image: url(./blueshade.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
-.Intro{
-
-  background: url(hacker-wide.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  max-width: 100%;
-  overflow: hidden;
-  padding: 70px;
-}
-
-.Main{
- display: flex;
- flex-direction: column;
-
-margin: 0;
-padding: 0;
-max-width: 100vw;
-}
-.introtxt{
-  position: relative;
-
-  width: 24em;
-}
-.flip-cards{
-  width: 300px;
-  height: 300px;
-min-height: 100%;
-}
-       }
-@media all and (min-width:781px){
-  .flip-cards{
+@media all and (min-width:781px) {
+  .flip-cards {
     width: 500px;
     height: 300px;
-      min-height: 100%;
-  }
-  .intro2{
-
-  margin: 0;
-  padding: 0;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch;
-  justify-content: space-around;
-  background-image: url(./bgintro.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+    min-height: 100%;
   }
 
-  .Intro{
+  .intro2 {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-around;
+    background-image: url(./bgintro.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .Intro {
     position: relative;
     height: 100vh;
     min-height: 100%;
     max-height: 100%;
     background: url(./hacker-wide.jpg);
     background-size: cover;
-    }
-  .Main{
-   display: flex;
-   flex-direction: column;
-   margin: 0;
-   padding: 0;
   }
-  .introtxt{
-    position: sticky;
 
+  .Main {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+
+  .introtxt {
+    position: relative;
     font-size: 2vw;
   }
+
+  .textouter {
+    position: relative;
+    padding-right: 100px;
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    background-image: url(./blueshade.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
-.textouter{
-  padding-right: 100px;
-  padding-top: 50px;
-  display: flex;
-  justify-content: space-between;
-}
-.fp-back2{
+
+.fp-back2 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   margin: 0;
-  padding:0;
-}
+  padding: 0;
